deployments/ollama-gpu.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ollama
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ollama
    spec:      
      containers:
      - args:
        - serve
        image: quay.io/johnibm/ollama:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 2000m
            memory: 9Gi
            nvidia.com/gpu: 1
          limits:
            cpu: 4000m
            memory: 9Gi
            nvidia.com/gpu: 1
        name: ollama
        ports:
        - containerPort: 11434
          name: frontend
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.ollama
          name: ollama-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: ollama-data
        persistentVolumeClaim:
          claimName: ollama-data
---
# Service ollama
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: ollama
spec:
  ClusterIP: None
  selector:
    app: ollama
  ports:
    - name: api
      port: 11434
      targetPort: 11434
